--- a/css/all.css
+++ b/css/all.css
@@ -176,9 +176,9 @@
   display: block;
   padding: 0 5px;
 }
-@media all and (max-width: 320px) {
+@media all and (max-width: 768px) {
   .section .showing-list a > div {
-    padding-right: 0;
+    padding: 0;
   }
 }
 .section .showing-list .poster img {
