--- a/scss/global.scss
+++ b/scss/global.scss
@@ -1,6 +1,8 @@
 @use "variables"as v;
+@import "_normalize";
+@import "_jqdatepicker";
+@import "_nav"; 
 
-/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 * {
   box-sizing: border-box;
 }
@@ -32,10 +34,6 @@ html {
   }
 }
 
-main {
-  display: block;
-}
-
 h1,
 h2,
 p,
@@ -48,68 +46,16 @@ span {
   text-rendering: optimizeLegibility;
 }
 
-hr {
-  box-sizing: content-box;
-  height: 0;
-  overflow: visible;
-}
-
-pre {
-  font-family: monospace, monospace;
-  font-size: 1em;
-}
 
 a {
-  background-color: transparent;
   text-decoration: none;
   color: v.$font-primary;
   text-rendering: optimizeLegibility;
 }
 
-abbr[title] {
-  border-bottom: none;
-  text-decoration: underline;
-  text-decoration: underline dotted;
-}
-
-code,
-kbd,
-samp {
-  font-family: monospace, monospace;
-  font-size: 1em;
-}
-
-sub,
-sup {
-  font-size: 75%;
-  line-height: 0;
-  position: relative;
-  vertical-align: baseline;
-}
-
-sub {
-  bottom: -0.25em;
-}
-
-sup {
-  top: -0.5em;
-}
-
 img {
-  border-style: none;
   vertical-align: middle;
   width: 100%;
-}
-
-button,
-input,
-optgroup,
-select,
-textarea {
-  font-family: inherit;
-  font-size: 100%;
-  line-height: 1.15;
-  margin: 0;
 }
 
 input[type='text'],
@@ -215,22 +161,9 @@ select {
 }
 
 button,
-input {
-  /* 1 */
-  overflow: visible;
-}
-
-button,
-select {
-  /* 1 */
-  text-transform: none;
-}
-
-button,
 [type="button"],
 [type="reset"],
 [type="submit"] {
-  -webkit-appearance: button;
   cursor: pointer;
   background: transparent;
   border: 1px solid transparent;
@@ -241,8 +174,6 @@ button::-moz-focus-inner,
 [type="button"]::-moz-focus-inner,
 [type="reset"]::-moz-focus-inner,
 [type="submit"]::-moz-focus-inner {
-  border-style: none;
-  padding: 0;
   box-shadow: 0 0 2px 2px #81818156;
 }
 
@@ -250,98 +181,13 @@ button:-moz-focusring,
 [type="button"]:-moz-focusring,
 [type="reset"]:-moz-focusring,
 [type="submit"]:-moz-focusring {
-  outline: 0px dotted ButtonText;
   box-shadow: 0 0 2px 2px #81818156;
-}
-
-fieldset {
-  padding: 0.35em 0.75em 0.625em;
-}
-
-legend {
-  box-sizing: border-box;
-  /* 1 */
-  color: inherit;
-  /* 2 */
-  display: table;
-  /* 1 */
-  max-width: 100%;
-  /* 1 */
-  padding: 0;
-  /* 3 */
-  white-space: normal;
-  /* 1 */
-}
-
-progress {
-  vertical-align: baseline;
-}
-
-textarea {
-  overflow: auto;
-}
-
-[type="checkbox"],
-[type="radio"] {
-  box-sizing: border-box;
-  /* 1 */
-  padding: 0;
-  /* 2 */
-}
-
-[type="number"]::-webkit-inner-spin-button,
-[type="number"]::-webkit-outer-spin-button {
-  height: auto;
-}
-
-[type="search"] {
-  -webkit-appearance: textfield;
-  /* 1 */
-  outline-offset: -2px;
-  /* 2 */
-}
-
-[type="search"]::-webkit-search-decoration {
-  -webkit-appearance: none;
-}
-
-::-webkit-file-upload-button {
-  -webkit-appearance: button;
-  /* 1 */
-  font: inherit;
-  /* 2 */
-}
-
-details {
-  display: block;
-}
-
-summary {
-  display: list-item;
-}
-
-template {
-  display: none;
-}
-
-[hidden] {
-  display: none;
-}
-
-legend,
-label,
-input,
-ul,
-li,
-span {
-  margin: 0;
-  padding: 0;
-  text-shadow: none;
 }
 
 ul,
 li {
   list-style: none;
+  padding: 0;
 }
 
 /* other share */
@@ -436,512 +282,6 @@ input:-internal-autofill-selected {
 
 .yn {
   background-color: v.$green-bg-color;
-}
-
-// JQ datepicker
-.ui-datepicker-month,
-.ui-datepicker-year {
-  height: fit-content;
-  border: none;
-  background-color: #3a3a3a;
-}
-
-.ui-widget-header {
-  background: #3a3a3a;
-}
-
-.ui-datepicker .ui-datepicker-prev,
-.ui-datepicker .ui-datepicker-next {
-  top: 3px;
-}
-
-.ui-widget-header .ui-icon {
-  background-image: url('data:image/svg+xml;utf8,<svg width="10" height="13" viewBox="0 0 10 13" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M0.286023 7.03462L8.95386 12.8845C9.05389 12.952 9.17095 12.9915 9.29236 12.9988C9.41377 13.006 9.53492 12.9808 9.64267 12.9258C9.75042 12.8707 9.84067 12.788 9.90365 12.6866C9.96664 12.5851 9.99996 12.4688 10 12.3502V0.65042C10.0001 0.531782 9.96685 0.415385 9.90391 0.313844C9.84098 0.212302 9.75073 0.12949 9.64296 0.074381C9.53519 0.019272 9.414 -0.00603138 9.29253 0.00121319C9.17106 0.00845776 9.05394 0.0479739 8.95386 0.115479L0.286023 5.96538C0.197717 6.02546 0.125599 6.10544 0.0758019 6.19852C0.0260045 6.2916 0 6.39502 0 6.5C0 6.60498 0.0260045 6.7084 0.0758019 6.80148C0.125599 6.89456 0.197717 6.97454 0.286023 7.03462V7.03462Z" fill="white"/></svg>');
-
-}
-
-.ui-icon-circle-triangle-e {
-  background-position: 0px 2px;
-  transform: rotate(180deg);
-}
-
-.ui-icon-circle-triangle-w {
-  background-position: 0px 2px;
-}
-
-.ui-datepicker-next-hover,
-.ui-datepicker-prev-hover {
-  background: transparent !important;
-  border: 1px solid transparent !important;
-  right: 3px;
-}
-
-.ui-state-default,
-.ui-widget-content .ui-state-default,
-.ui-widget-header .ui-state-default,
-.ui-button,
-html .ui-button.ui-state-disabled:hover,
-html .ui-button.ui-state-disabled:active {
-  border: 1px solid transparent;
-  background: transparent;
-}
-
-.ui-state-highlight,
-.ui-widget-content .ui-state-highlight,
-.ui-widget-header .ui-state-highlight {
-  border: 1px solid #fcc90054;
-  background: #fcc90054;
-  color: #000;
-}
-
-.ui-state-active,
-.ui-widget-content .ui-state-active,
-.ui-widget-header .ui-state-active,
-a.ui-button:active,
-.ui-button:active,
-.ui-button.ui-state-active:hover {
-  border: 1px solid v.$red-bg-color;
-  background: v.$red-bg-color;
-  color: #fff;
-}
-
-.ui-datepicker td span,
-.ui-datepicker td a {
-  text-align: center;
-}
-
-
-/* nav */
-nav {
-  // position: fixed;
-  width: 100%;
-  max-width: v.$max-width;
-  margin: 0 auto;
-  top: 0;
-  left: 0;
-  padding: 70px 0;
-  // transition: all 0.5s;
-  z-index: 5;
-
-  &.mini {
-    padding: 10px 0;
-  }
-
-  .input-toggler {
-    display: none;
-  }
-
-  .menu-toggler {
-    position: absolute;
-    right: 30px;
-    top: 29px;
-    width: 35px;
-    height: 50px;
-    z-index: 1000;
-    display: none;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    cursor: pointer;
-
-    @include v.under-pad-width {
-      display: flex;
-    }
-
-    .menu-toggler-line {
-      width: 100%;
-      height: 2px;
-      background: v.$primary;
-      margin: 0 0 8px 0px;
-      position: relative;
-      -webkit-transition: all 0.35s ease-out;
-      -moz-transition: all 0.35s ease-out;
-      -o-transition: all 0.35s ease-out;
-      transition: all 0.35s ease-out;
-    }
-  }
-
-  .input-toggler {
-    &~.sidebar .menu {
-      @include v.under-pad-width {
-        // position: absolute;
-        // top: 0;
-        // bottom: 0;
-        // left: -300px;
-        // width: 300px;
-        z-index: 999;
-      }
-    }
-
-    &~.sidebar-overlay {
-      position: absolute;
-      background-color: #000;
-      width: 100%;
-      top: 0;
-      bottom: 0;
-      opacity: 0;
-      display: none;
-      -webkit-transition: all 0.45s ease-out;
-      -moz-transition: all 0.45s ease-out;
-      -o-transition: all 0.45s ease-out;
-      transition: all 0.45s ease-out;
-      z-index: 999;
-    }
-
-    &:checked {
-      &~.menu-toggler .menu-toggler-line {
-        top: 5px;
-        transform: translateY(100px);
-        transform: rotate(45deg);
-      }
-
-      &~.menu-toggler .menu-toggler-line:nth-child(2) {
-        display: none;
-      }
-
-      &~.menu-toggler .menu-toggler-line:nth-child(3) {
-        top: -5px;
-        transform: translateY(10);
-        transform: rotate(135deg);
-      }
-
-      &~.sidebar .menu {
-        left: 0;
-      }
-
-      &~.sidebar-overlay {
-        display: block;
-        opacity: 0.9;
-      }
-    }
-  }
-}
-
-.sidebar {
-  display: flex;
-  align-items: center;
-  padding: 0 10px;
-  margin: 0 auto;
-
-  .nav-menu {
-    display: flex;
-    width: 100%;
-    justify-content: space-between;
-
-    @include v.under-pad-width {
-      // display: none;
-    }
-
-  }
-
-
-  .nav-brand {
-    padding: 20px;
-  }
-
-  .menu {
-    // transition: all 0.35s ease-out;
-    text-align: center;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-shrink: 1;
-    flex-grow: 1;
-
-    .dropdown-menu {
-      width: 100%;
-      height: fit-content;
-      position: absolute;
-      top: 45px;
-      display: flex;
-      flex-direction: column;
-      overflow: hidden;
-      visibility: hidden;
-      transition: visibility 0.5s linear;
-
-      @include v.phone-width {
-        position: static;
-        display: block;
-      }
-
-      li {
-        padding: 4px 0;
-        margin-bottom: 5px;
-        transform: translateY(-150px);
-        transition: transform .5s cubic-bezier(.74, -0.23, .4, .88);
-
-        &:nth-of-type(odd) {
-          background-color: v.$primary;
-        }
-
-        &:nth-of-type(even) {
-          background-color: v.$font-secondary;
-        }
-
-        a {
-          color: v.$font-primary;
-          font-size: 0.9rem;
-        }
-      }
-    }
-
-    >li {
-      width: 15%;
-      text-align: center;
-      position: relative;
-
-      @include v.other-width {
-        width: 18%;
-      }
-
-      &:hover {
-        & .dropdown-menu {
-          visibility: visible;
-
-          li {
-            transform: translateY(0);
-            opacity: 1;
-          }
-        }
-
-        .menu-link {
-          @extend %weight600;
-        }
-      }
-    }
-
-    .menu-link {
-      position: relative;
-      display: inline-block;
-      text-align: center;
-      padding: 10px 0;
-      color: v.$font-primary;
-      transition: color 0.4s ease, font-weight 0.4s ease;
-
-      &.active {
-        @extend %weight600;
-      }
-    }
-  }
-  // 電腦版會員
-  .user-account {
-    cursor: pointer;
-    border: 1px solid v.$primary;
-    border-radius: 25px;
-    z-index: 2;
-    position: relative;
-    flex-shrink: 0;
-
-
-    @include v.under-pad-width {
-      display: none;
-    }
-
-    div {
-      display: inline-block;
-
-      &.user {
-        padding: 0.8em 1.2em;
-        border-radius: 22px;
-        color: v.$font-primary;
-        display: none;
-
-        .user-name {
-          display: inline-flex;
-          max-width: 80px;
-          width: 80px;
-          overflow: hidden;
-          white-space: nowrap;
-          text-overflow: clip;
-          margin-right: 2px;
-        }
-      }
-
-      &.user-login {
-        display: inline-block;
-      }
-
-      &.user-regist {
-        display: inline-block;
-
-        a {
-          background-color: transparent;
-          padding: 10px 20px 10px 10px;
-        }
-      }
-
-      a {
-        display: inline-block;
-        padding: 10px 25px;
-        background-color: v.$primary;
-        border-radius: 22px;
-      }
-
-      &.account-sub {
-        display: none;
-        text-align: center;
-        height: 0;
-        overflow: hidden;
-        width: 100%;
-        transition: height 0.3s cubic-bezier(.6, -0.3, .4, .88);
-
-        hr {
-          border-color: #fff;
-          background-color: #fff;
-          width: 85%;
-          margin: 30px auto 20px auto;
-          transform: scaleX(0);
-          transition: transform 0.4s ease;
-        }
-
-        a {
-          display: block;
-          background-color: transparent;
-          opacity: 0;
-          overflow: hidden;
-          transform: translate(0px, -5px);
-          transition: transform 0.4s linear,
-            opacity 0.4s linear;
-          padding: 0 0 15px 0;
-
-          &::before {
-            content: "";
-            display: inline-block;
-            width: 8px;
-            height: 8px;
-            margin-right: 5px;
-          }
-
-          &:hover {
-            &::before {
-              border-radius: 100%;
-              margin-right: 5px;
-              margin-bottom: 3px;
-              background-color: v.$blue-bg-color;
-            }
-          }
-
-        }
-      }
-    }
-
-    &.-active {
-      background-color: v.$primary;
-
-      .account-sub {
-        height: 190px;
-
-        hr {
-          transform: scaleX(1);
-          transform-origin: left;
-          transition-delay: 0.3s;
-        }
-
-        a {
-          transform: translate(0px, 0px);
-          opacity: 1;
-
-          &:nth-of-type(1) {
-            transition-delay: 0.4s;
-          }
-
-          &:nth-of-type(2) {
-            transition-delay: 0.6s;
-          }
-
-          &:nth-of-type(3) {
-            transition-delay: 0.8s;
-          }
-        }
-      }
-    }
-
-    &.-leave {
-      background-color: transparent;
-
-      .account-sub {
-        transition: height 0.3s cubic-bezier(.6, -0.3, .4, .88) 1s;
-        height: 0;
-
-        hr {
-          transition: transform 0.4s ease 0.9s;
-          transform: scaleX(0);
-          transform-origin: right;
-        }
-
-        a {
-          transition: transform 0.3s linear,
-            opacity 0.5s linear;
-          transform: translate(0px, -5px);
-          opacity: 0;
-
-          &:nth-of-type(1) {
-            transition-delay: 0.7s;
-          }
-
-          &:nth-of-type(2) {
-            transition-delay: 0.5s;
-          }
-
-          &:nth-of-type(3) {
-            transition-delay: 0.2s;
-          }
-        }
-      }
-    }
-
-    &.isUser {
-      background-color: v.$primary;
-      border: none;
-
-
-      .account-sub {
-        position: absolute;
-        top: 25px;
-        display: block;
-        z-index: -2;
-        background-color: v.$primary;
-        border-bottom-left-radius: 22px;
-        border-bottom-right-radius: 22px;
-      }
-
-      .user {
-        display: block;
-      }
-
-      .user-login,
-      .user-regist {
-        display: none;
-      }
-
-      &:hover {
-        background-color: v.$primary;
-      }
-    }
-
-    &:hover {
-      background-color: transparent;
-    }
-  }
-  // 手機版會員
-  .user-account-mobile{
-    @include v.pc-width {
-      display: none;
-    }
-  
-    @include v.under-pad-width {
-      display: block;
-      .user,.account-sub{display: none;}
-      .user-login,.user-regist{display: block;}
-      &.isUser{
-      .user{display: block;}
-      .user-login{display: none;}
-      .user-regist{display: none;}
-    }
-    }
-   
-  
-  }
 }
 
 /* share style */
@@ -1358,7 +698,7 @@ footer {
 /*modal*/
 .modal {
   visibility: hidden;
-  z-index: 20;
+  z-index: 1000;
   opacity: 0;
   position: absolute;
   top: 0;
@@ -1375,7 +715,7 @@ footer {
 .modal:target {
   visibility: visible;
   opacity: 1;
-  z-index: 20;
+  z-index: 1000;
 }
 
 .modal-content {
