--- a/scss/page.scss
+++ b/scss/page.scss
@@ -384,9 +384,9 @@
     }
 
     .item {
+      position: relative;
       border-top: 1px solid v.$font-secondary;
       padding: 40px 2em 0 2em;
-      margin-bottom: 40px;
 
       @include v.other-width {
         padding: 20px 0 0 0;
@@ -480,7 +480,8 @@
 
     .ticket-state {
       position: absolute;
-      right: 0;
+      right: 2em;
+      top: 40px;
 
 
       @include v.phone-width {
@@ -495,20 +496,17 @@
         justify-content: space-between;
         margin-bottom: 10px;
         color: v.$font-primary;
-        padding: 5px 25px;
+        padding: 5px 15px;
         border-radius: 3px;
+        cursor: pointer;
 
         @include v.phone-width {
           width: 130px;
           margin-right: 10px;
         }
 
-        &.paid {
+        &.collapse {
           @include v.bg-opacity(v.$blue-bg-color, 0.8)
-        }
-
-        &.getQR {
-          background-color: v.$blue-bg-color;
         }
 
         &.refund {
@@ -519,6 +517,35 @@
           margin-left: 3px;
         }
       }
+    }
+    .ticket-info{
+      width: 100%;
+      border-top: 1px solid v.$font-secondary;
+      border-bottom: 1px dotted v.$font-secondary;
+      padding: 2em 0;
+      margin: 2em 0 0 0; 
+      display: flex;
+      .ticket-state{
+        top: 0;
+      }
+      &:last-of-type{
+        border-bottom: none;
+      }
+      .row-left{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        span{
+          width: 80px;
+          text-align: center;
+          display: inline-block;
+          padding: 2px 10px;
+          border: 1px solid #fff;
+          border-radius: 12px;
+          
+        }
+      }
+      
     }
   }
 
