--- a/scss/page.scss
+++ b/scss/page.scss
@@ -389,7 +389,7 @@
       padding: 40px 2em 0 2em;
 
       @include v.other-width {
-        padding: 20px 0 0 0;
+        padding: 20px 0;
         justify-content: center;
       }
     }
@@ -480,9 +480,8 @@
 
     .ticket-state {
       position: absolute;
-      right: 2em;
-      top: 40px;
-
+      right: 0;
+      top: 20px;
 
       @include v.phone-width {
         position: static;
@@ -521,22 +520,29 @@
     .ticket-info{
       width: 100%;
       border-top: 1px solid v.$font-secondary;
-      border-bottom: 1px dotted v.$font-secondary;
-      padding: 2em 0;
-      margin: 2em 0 0 0; 
-      display: flex;
+      margin-top: 20px;
+      position: relative;
+      display: none;
+      .info-item{
+        border-bottom: 1px dotted v.$font-secondary;
+        padding: 1em 0;
+        &:last-of-type{
+          border-bottom: 0;
+        }
+      }
       .ticket-state{
         top: 0;
+        right: 0;
       }
       &:last-of-type{
         border-bottom: none;
       }
       .row-left{
         display: flex;
-        align-items: center;
+        align-items: center; 
         justify-content: center;
         span{
-          width: 80px;
+          width: 100px;
           text-align: center;
           display: inline-block;
           padding: 2px 10px;
