--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -1,4 +1,3 @@
-/* nav */
 nav {
   // position: fixed;
   width: 100%;
@@ -25,8 +24,7 @@ nav {
     position: absolute;
     right: 30px;
     top: 29px;
-    width: 35px;
-    height: 50px;
+    width: 25px;
     z-index: 1000;
     display: none;
     justify-content: center;
@@ -50,121 +48,7 @@ nav {
       transition: all 0.35s ease-out;
     }
   }
-
-  .input-toggler {
-    &~.sidebar{
-       @include v.under-pad-width {
-         flex-direction: column;
-
-        }
-      .nav-menu{
-         @include v.under-pad-width {
-          flex-direction: column;
-          align-items: center;
-         }
-      }
-      .user-account{
-        
-        @include v.under-pad-width {
-          display: none;
-          margin-bottom: 10px;
-          width: fit-content;
-          order: -1;
-        }
-        .account-sub{
-          @include v.under-pad-width {
-          transition: none;
-          height: fit-content;
-          position: static;
-          transform: none;
-          }
-          hr{
-            @include v.under-pad-width {
-              transition: none;
-              transform:none;
-              margin: 0 auto 20px auto;
-            }
-          }
-          a{
-            @include v.under-pad-width {
-              transition: none;
-              transform: none;
-              opacity: 1;
-              padding: 0 0 10px 0;
-            }
-          }
-        }
-      }
-    }
-    &~.sidebar .menu {
-      @include v.under-pad-width {
-        width: 100%;
-        z-index: 999;
-        display: none; 
-      }
-    }
-
-    &~.sidebar-overlay {
-      position: absolute;
-      background-color: #000;
-      width: 100%;
-      top: 0;
-      bottom: 0;
-      opacity: 0;
-      display: none;
-      -webkit-transition: all 0.45s ease-out;
-      -moz-transition: all 0.45s ease-out;
-      -o-transition: all 0.45s ease-out;
-      transition: all 0.45s ease-out;
-      z-index: 99;
-    }
-
-    &:checked {
-      &~.sidebar .menu {
-      @include v.under-pad-width {
-        z-index: 999;
-        display: block; 
-      }
-    }
-      &~.sidebar .nav-menu {
-      @include v.under-pad-width {
-        height: 100vh;
-        overflow-y: auto;
-        padding-bottom: 100px;
-        padding-left: -15px;
-      }
-    }
-    &~.sidebar .user-account {
-      @include v.under-pad-width {
-        z-index: 999;
-        display: block; 
-      }
-    }
-      &~.menu-toggler .menu-toggler-line {
-        top: 5px;
-        transform: translateY(100px);
-        transform: rotate(45deg);
-      }
-
-      &~.menu-toggler .menu-toggler-line:nth-child(2) {
-        display: none;
-      }
-
-      &~.menu-toggler .menu-toggler-line:nth-child(3) {
-        top: -5px;
-        transform: translateY(10);
-        transform: rotate(135deg);
-      }
-
-      &~.sidebar-overlay {
-        display: block;
-        opacity: 1;
-      }
-    }
-  }
-}
-
-.sidebar {
+    .sidebar {
   display: flex;
   align-items: center;
   padding: 0 10px;
@@ -203,7 +87,7 @@ nav {
       transition: visibility 0.5s linear;
 
       @include v.under-pad-width {
-        position: static;
+        position: unset;
         visibility:visible;
         overflow:unset;
         transition: none;
@@ -318,15 +202,23 @@ nav {
 
         a {
           background-color: transparent;
-          padding: 10px 20px 10px 10px;
+          padding: 8px 20px 8px 10px;
+          @include v.under-pad-width {
+          padding: 5px 10px;
+
+         }
         }
       }
 
       a {
         display: inline-block;
-        padding: 10px 25px;
+        padding: 8px 25px;
         background-color: v.$primary;
-        border-radius: 22px;
+        border-radius: 18px;
+         @include v.under-pad-width {
+          padding: 5px 10px;
+          border-radius: 14px;
+         }
       }
 
       &.account-sub {
@@ -476,3 +368,126 @@ nav {
     }
   }
 }
+
+  .input-toggler {
+    &~.sidebar{
+       @include v.under-pad-width {
+         flex-direction: column;
+
+        }
+      .nav-menu{
+         @include v.under-pad-width {
+          flex-direction: column;
+          align-items: center;
+         }
+      }
+      .user-account{
+        
+        @include v.under-pad-width {
+          display: none;
+          margin-bottom: 10px;
+          width: fit-content;
+          order: -1;
+        }
+        .account-sub{
+          @include v.under-pad-width {
+          transition: none;
+          height: fit-content;
+          position: static;
+          transform: none;
+          }
+          hr{
+            @include v.under-pad-width {
+              transition: none;
+              transform:none;
+              margin: 0 auto 20px auto;
+            }
+          }
+          a{
+            @include v.under-pad-width {
+              transition: none;
+              transform: none;
+              opacity: 1;
+              padding: 0 0 10px 0;
+            }
+          }
+        }
+      }
+    }
+    &~.sidebar .menu {
+      @include v.under-pad-width {
+        width: 100%;
+        z-index: 999;
+        display: none; 
+      }
+    }
+
+    &~.sidebar-overlay {
+      position: absolute;
+      background-color: #000;
+      width: 100%;
+      top: 0;
+      bottom: 0;
+      opacity: 0;
+      display: none;
+      -webkit-transition: all 0.45s ease-out;
+      -moz-transition: all 0.45s ease-out;
+      -o-transition: all 0.45s ease-out;
+      transition: all 0.45s ease-out;
+      z-index: 99;
+    }
+
+    &:checked {
+      &~.sidebar{
+        @include v.under-pad-width {
+        height: 100vh;
+        overflow-y: auto;
+        padding-bottom: 20px;
+        }
+      }
+      &~.sidebar .menu {
+      @include v.under-pad-width {
+        z-index: 999;
+        display: block; 
+        padding-bottom: 20px;
+      }
+    }
+      &~.sidebar .nav-menu {
+      @include v.under-pad-width {
+        height: 100vh;
+      }
+    }
+    &~.sidebar .user-account {
+      @include v.under-pad-width {
+        z-index: 999;
+        display: block;  
+      }
+    }
+      &~.menu-toggler .menu-toggler-line {
+        top: 5px;
+        transform: translateY(100px);
+        transform: rotate(45deg);
+      }
+
+      &~.menu-toggler .menu-toggler-line:nth-child(2) {
+        display: none;
+      }
+
+      &~.menu-toggler .menu-toggler-line:nth-child(3) {
+        top: -5px;
+        transform: translateY(10);
+        transform: rotate(135deg);
+      }
+
+      &~.sidebar-overlay {
+        @include v.under-pad-width {
+        display: block;
+        opacity: 1;
+        }
+      }
+    }
+  }
+
+}
+
+
