測試手機側滑樣式

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -27,6 +27,7 @@ $max-width: 1200px;
   background-color: rgba($color, $opacity);
 }
 @mixin row-width($width){
+    width: $width;
     flex-basis: $width;
 }
 
