--- a/css/global.css
+++ b/css/global.css
@@ -592,7 +592,7 @@ nav .sidebar .user-account div.user-regist a {
 }
 @media all and (max-width: 991px) {
   nav .sidebar .user-account div.user-regist a {
-    padding: 5px 10px;
+    padding: 8px 15px;
   }
 }
 nav .sidebar .user-account div a {
@@ -603,8 +603,8 @@ nav .sidebar .user-account div a {
 }
 @media all and (max-width: 991px) {
   nav .sidebar .user-account div a {
-    padding: 5px 10px;
-    border-radius: 14px;
+    padding: 8px 15px;
+    border-radius: 18px;
   }
 }
 nav .sidebar .user-account div.account-sub {
@@ -848,6 +848,7 @@ nav .input-toggler ~ .sidebar-overlay {
 @media all and (max-width: 991px) {
   nav .input-toggler:checked ~ .sidebar .nav-menu {
     height: 100vh;
+    font-size: 1.2rem;
   }
 }
 @media all and (max-width: 991px) {
@@ -1343,6 +1344,7 @@ input:-internal-autofill-selected {
 }
 
 .row-1 {
+  width: 10%;
   -ms-flex-preferred-size: 10%;
       flex-basis: 10%;
 }
@@ -1360,6 +1362,7 @@ input:-internal-autofill-selected {
 }
 
 .row-2 {
+  width: 20%;
   -ms-flex-preferred-size: 20%;
       flex-basis: 20%;
 }
@@ -1383,6 +1386,7 @@ input:-internal-autofill-selected {
 }
 
 .row-3 {
+  width: 30%;
   -ms-flex-preferred-size: 30%;
       flex-basis: 30%;
 }
@@ -1400,6 +1404,7 @@ input:-internal-autofill-selected {
 }
 
 .row-3-1 {
+  width: 33.33%;
   -ms-flex-preferred-size: 33.33%;
       flex-basis: 33.33%;
 }
@@ -1417,6 +1422,7 @@ input:-internal-autofill-selected {
 }
 
 .row-4 {
+  width: 40%;
   -ms-flex-preferred-size: 40%;
       flex-basis: 40%;
 }
@@ -1434,6 +1440,7 @@ input:-internal-autofill-selected {
 }
 
 .row-7 {
+  width: 70%;
   -ms-flex-preferred-size: 70%;
       flex-basis: 70%;
 }
@@ -1451,6 +1458,7 @@ input:-internal-autofill-selected {
 }
 
 .row-6 {
+  width: 60%;
   -ms-flex-preferred-size: 60%;
       flex-basis: 60%;
 }
@@ -1468,6 +1476,7 @@ input:-internal-autofill-selected {
 }
 
 .row-5 {
+  width: 50%;
   -ms-flex-preferred-size: 50%;
       flex-basis: 50%;
 }
@@ -1485,6 +1494,7 @@ input:-internal-autofill-selected {
 }
 
 .row-8 {
+  width: 80%;
   -ms-flex-preferred-size: 80%;
       flex-basis: 80%;
 }
@@ -1502,6 +1512,7 @@ input:-internal-autofill-selected {
 }
 
 .row-9 {
+  width: 90%;
   -ms-flex-preferred-size: 90%;
       flex-basis: 90%;
 }
@@ -1699,14 +1710,13 @@ footer > div a img {
 
 /*modal*/
 .modal {
+  width: 100%;
+  height: 100%;
   visibility: hidden;
   z-index: 1000;
   opacity: 0;
   position: absolute;
   top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
