--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -204,8 +204,7 @@ nav {
           background-color: transparent;
           padding: 8px 20px 8px 10px;
           @include v.under-pad-width {
-          padding: 5px 10px;
-
+          padding: 8px 15px;
          }
         }
       }
@@ -216,8 +215,8 @@ nav {
         background-color: v.$primary;
         border-radius: 18px;
          @include v.under-pad-width {
-          padding: 5px 10px;
-          border-radius: 14px;
+          padding: 8px 15px;
+          border-radius: 18px;
          }
       }
 
@@ -455,6 +454,7 @@ nav {
       &~.sidebar .nav-menu {
       @include v.under-pad-width {
         height: 100vh;
+        font-size: 1.2rem;
       }
     }
     &~.sidebar .user-account {
