--- a/scss/global.scss
+++ b/scss/global.scss
@@ -687,14 +687,13 @@ footer {
 
 /*modal*/
 .modal {
+  width: 100%;
+  height: 100%;
   visibility: hidden;
   z-index: 1000;
   opacity: 0;
   position: absolute;
   top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
   display: flex;
   justify-content: center;
   background: rgba(0, 0, 0, 0.7);
