選取票種頁面 table橫移效果修正

--- a/css/page.css
+++ b/css/page.css
@@ -1261,12 +1261,6 @@
   margin-bottom: 30px;
   overflow-x: auto;
 }
-@media all and (max-width: 768px) {
-  .section .tickets-package .table {
-    max-width: 800px;
-    width: 800px;
-  }
-}
 .section .tickets-package .main-title div:nth-of-type(1)::before {
   background-color: #00ABF2;
 }
@@ -1306,6 +1300,7 @@
   margin-top: 5px;
   background-color: #ccc;
   padding: 15px 20px;
+  min-width: 800px;
 }
 @media all and (max-width: 768px) {
   .section .tickets-package .package-content {
@@ -1329,6 +1324,10 @@
 }
 .section .tickets-package .package-content .ticket-set .table-td:nth-of-type(2) {
   width: 10%;
+  max-width: 10%;
+}
+.section .tickets-package .package-content .ticket-set .table-td:nth-of-type(3) {
+  width: 15%;
   max-width: 10%;
 }
 .section .tickets-package .package-content .ticket-set .table-td:nth-of-type(4) {
